# cluster-controller

./: .dockerignore  .gitignore  Cargo.toml  Containerfile.ovn  Dockerfile  Dockerfile.debug  build.rs  ovn-publish.sh  push.sh
deployment/: clusterrolebinding.yaml  controller.yaml  namespace.yaml  rbac.yaml
samples/: cluster.yaml  combined.yaml  differentnet.yaml  network.yaml  router.yaml  vm.yaml  volume.yaml  volume_from_template.yaml
src/: deployer.rs  errors.rs  host.rs  labels_and_annotations.rs  logging.rs  main.rs  utils.rs
src/cluster/: daemonset.rs  mod.rs
src/cluster/ceph/: controller.rs  crd.rs  lowlevel.rs  mod.rs
src/cluster/ceph/controllers/: images.rs  mod.rs  volumes.rs
src/cluster/controllers/: images.rs  mod.rs  network.rs  node.rs  ovn.rs  router.rs  volumes.rs
src/cluster/controllers/ovn_services/: mod.rs  ovn_central.rs  ovn_controller.rs
src/cluster/controllers/virtualmachine/: mod.rs  ovn.rs  utils.rs  vm.rs
src/cluster/libvirt/: controller.rs  crd.rs  mod.rs  scheduling.rs  utils.rs
src/cluster/libvirt/controller/: mod.rs  node.rs  vm.rs
src/cluster/ovn/: common.rs  controller.rs  deserialization.rs  dhcpoptions.rs  jsonrpc.rs  logicalrouter.rs  logicalrouterport.rs  logicalswitch.rs  logicalswitchport.rs  lowlevel.rs  mod.rs  staticroute.rs  types.rs  utils.rs
src/cluster/ovn/controllers/: mod.rs  network.rs  router.rs  vm.rs
src/cluster/ovn/types/: dhcpoptions.rs  logicalrouter.rs  logicalrouterport.rs  logicalswitch.rs  logicalswitchport.rs
src/crd/: ceph.rs  cluster.rs  libvirt.rs  libvirtnode.rs  mod.rs  network.rs  ovn.rs  router.rs  utils.rs  virtualmachine.rs
src/host/: daemonset.rs  libvirt.rs  mod.rs
src/host/libvirt/: controller.rs  domain.rs  evpn.rs  handlers.rs  libvirtnode.rs  lowlevel.rs  mod.rs  secrets.rs  templates.rs  utils.rs
src/interfaces/: mod.rs
src/interfaces/ovn/: common.rs  deserialization.rs  lowlevel.rs  utils.rs
src/interfaces/ovn/types/: dhcpoptions.rs  logicalrouter.rs  logicalrouterport.rs  logicalswitch.rs  logicalswitchport.rs  mod.rs  staticroute.rs
src/metadataservice/: backend.rs  bidirectional_channel.rs  deployment.rs  mod.rs  networking.rs  protocol.rs  proxy.rs
src/shared/: mod.rs
src/shared/ceph/: lowlevel.rs  mod.rs
src/utils/: extend_traits.rs  libvirt_storage.rs  mod.rs  resource_controller.rs  shortcuts.rs  strings.rs
src/utils/traits/: kube.rs  mod.rs  node.rs  virtualmachine.rs
templates/: domain.xml  features.xml  misc_devices.xml  network_interface.xml  secret.xml  storage.xml
