[package]
name = "cluster-controller"
version = "0.1.0"
authors = ["Esa Varemo <esa@kuivanto.fi>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
regex = "1.5"

[dependencies]

# k8s
kube = { version = "0.74.0", features = ["runtime", "derive", "jsonpatch"] }
k8s-openapi = { version = "0.15.0", default-features = false, features = ["v1_21"] }

# serialization
serde = "1.0.136"
serde_json = "1.0.61"
serde_yaml = "0.8.14"
serde_derive = "1.0.117"
schemars = "0.8.0"

# misc
tokio = { version = "1.0.1", features = ["full"] }
tempfile = "3.1.0"
futures = "0.3.5"
thiserror = "1.0.22"
humanize-rs = "0.1.5"
askama = "0.8"
sha2 = "0.9.3"
uuid = { version = "0.8", features = ["v4"] }
regex = "1.5.4"
lazy_static = "1.4.0"
ipnet = "2.4.0"
rand = "0.8.5"
log = "0.4.17"
pretty_env_logger = "0.4.0"

# ceph
libc = "0.2.82"
librados-sys = "0.1.0"
librbd-sys = "0.1.0"

# libvirt
virt = { git = "https://github.com/varesa/libvirt-rust.git", branch = "hack" }

# metadata proxy
nix = "0.24.2"
warp = "0.3.2"
