[package]
name = "cluster-controller"
version = "0.1.0"
authors = ["Esa Varemo <esa@kuivanto.fi>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
regex = "1.9"

[dependencies]

# k8s
kube = { version = "0.84.0", features = ["runtime", "derive", "jsonpatch"] }
k8s-openapi = { version = "0.18.0", default-features = false, features = ["v1_24"] }

# serialization
serde = "1.0.174"
serde_json = "1.0.103"
serde_yaml = "0.9.25"
serde_derive = "1.0.174"
schemars = "0.8.12"

# misc
tokio = { version = "1.29.1", features = ["full"] }
tempfile = "3.7.0"
futures = "0.3.28"
thiserror = "1.0.44"
humanize-rs = "0.1.5"
askama = "0.12"
sha2 = "0.10.7"
uuid = { version = "1.4", features = ["v4"] }
regex = "1.9.1"
lazy_static = "1.4.0"
ipnet = "2.8.0"
rand = "0.8.5"
log = "0.4.19"
pretty_env_logger = "0.5.0"
async-trait = "0.1.72"

# ceph
libc = "0.2.147"
librados-sys = "0.1.0"
librbd-sys = "0.1.0"

# libvirt
#virt = { git = "https://github.com/varesa/libvirt-rust.git", branch = "hack" }
virt = "0.3.1"

# metadata proxy
nix = "0.26.2"
warp = "0.3.5"

# Tracing
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-opentelemetry = "0.23.0"
opentelemetry = { version = "0.22.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.15.0", features = ["http-proto", "trace"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }

